# integrators

./: .travis.yml  Cargo.toml  README.md  build.rs  cuba_wrapper.h  gsl_wrapper.h
src/: bindings.rs  ffi.rs  lib.rs  test.rs  traits.rs
src/cuba/: cuhre.rs  mod.rs  suave.rs  vegas.rs
src/gsl/: mod.rs  qag.rs  qagi.rs  qagp.rs  qags.rs  qawc.rs  qng.rs  test.rs
