[package]
name = "integrators"
version = "0.0.3"
authors = ["Jackson O'Donnell <jacksonhodonnell@gmail.com>"]
description = "Generic traits to allow easy plugging of different numerical integration algorithms, and wrappers for the Cuba and GSL integrators."
homepage = "https://github.com/jhod0/integrators"
repository = "https://github.com/jhod0/integrators"
keywords = ["ffi", "bindings", "math", "gsl", "cuba"]
# Because GSL is GPL (of course), any library using this will likely also be
# subject to a GSL license - so might as well make this GSL.
license = "GPL-3.0-or-later"

build = "build.rs"

[badges]
travis-ci = { repository = "jhod0/integrators", branch = "master" }

[features]
default = ["cuba", "gsl"]
cuba = []
gsl = []

[build-dependencies]
bindgen = "0.43.*"
